# KafkaProject

./: README.md
src/: Dockerfile  docker-compose.yml
src/consumer/: pyproject.toml
src/consumer/app/: main.py
src/db/: init.sql
src/producer/: pyproject.toml
src/producer/app/: main.py
