[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Dmitriy <ulrht88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.5.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
