[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Dmitriy <ulrht88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
confluent-kafka = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
